improve tupilang - get rid of print stmt and create std functions